# SIM-Web-2.0

client-app/: .env.production  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client-app/src/: App.tsx  api.ts  index.css  util.js  util.ts
server-app/: .env  README.md  main.py  pyproject.toml  requirements.txt
server-app/core/: config.py
server-app/processors/: week1_wordfreq.py
