[project]
name = "server-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",

]
